# tiffiny

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  cargo-build.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: format.rs  lib.rs  utils.rs
crates/image/: Cargo.toml
crates/image-proc/: Cargo.toml
crates/image/src/: lib.rs
src/: audio.rs  cli.rs  config.rs  image.rs  lib.rs  main.rs  pipeline.rs  tiff.rs  utils.rs
